--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
   <title>Castor and Pollux</title>
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/tachyons-min.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <div id="intro" class="dn">
+    <img id="introGif" src="media/giphy-downsized-large.gif" class="vh-100 w-100 v-mid"/>
+  </div>
+  <main class="">
+    <div id="stars" class="vh-100 w-100" style="top: 0">
+      <!-- <img src="media/star-background.jpg" alt="" class="h-100 w-100"> -->
+    </div>
+    <div class="vh-100 w-100 flex justify-center items-center">
+      <img src="media/Copy of CastorPollux.png" alt="Castor & Pollux"/>
+    </div>
+    <div id="container">
+      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+    </div>
+  </main>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
