--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
 <body>
   <div id="intro" class="dn">
-    <img id="introGif" src="media/giphy-downsized-large.gif" class="vh-100 w-100 v-mid"/>
+    <div id="introContainer" class="vh-100 w-100 flex justify-center items-center">
+      <!-- <img id="introGif" src="media/giphy-downsized-large.gif" class="vh-100 w-100 v-mid"/> -->
+      <img src="media/Copy of CastorPollux.png" alt="Castor & Pollux"/>
+    </div>
   </div>
   <main class="">
-    <div id="stars" class="vh-100 w-100" style="top: 0">
-      <!-- <img src="media/star-background.jpg" alt="" class="h-100 w-100"> -->
-    </div>
+    <div id="stars" class="vh-100 w-100" style="top: 0"></div>
     <div class="vh-100 w-100 flex justify-center items-center">
       <img src="media/Copy of CastorPollux.png" alt="Castor & Pollux"/>
     </div>
