added header bar stuff

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Castor and Pollux</title>
   <meta name="description" content="">
   <meta name="author" content="">
+  <link rel='icon' href='./media/Copy of CastorPollux.png'>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/tachyons-min.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -16,24 +17,34 @@
       <img src="media/Copy of CastorPollux.png" alt="Castor & Pollux"/>
     </div>
   </div>
-  <main class="">
+  <div id="mainContainer">
     <div id="stars" class="vh-100 w-100" style="top: 0"></div>
-    <div class="vh-100 w-100 flex justify-center items-center">
-      <img src="media/Copy of CastorPollux.png" alt="Castor & Pollux"/>
-    </div>
-    <div id="container">
-      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
-      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
-      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
-      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
-      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
-      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
-      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
-      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
-      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
-      <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
-    </div>
-  </main>
+    <header class="fixed w-100 flex items-center justify-center mt2">
+      <img src="media/Copy of CastorPollux.png" alt="Castor & Pollux" width="150"/>
+    </header>
+    <nav id="nav">
+      <div></div>
+      <div></div>
+      <div></div>
+    </nav>
+    <main>
+      <div class="vh-100 w-100 flex justify-center items-center white f1">
+        Welcome.
+      </div>
+      <div id="container">
+        <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+        <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+        <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+        <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+        <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+        <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+        <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+        <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+        <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+        <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
+      </div>
+    </main>
+  </div>
   <script src="js/scripts.js"></script>
 </body>
 </html>
