--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
     <header class="fixed w-100 flex items-center justify-center mt2">
       <img src="media/Copy of CastorPollux.png" alt="Castor & Pollux" width="150"/>
     </header>
-    <nav id="nav">
-      <div></div>
-      <div></div>
-      <div></div>
+    <div id="hamburgerNav">
+      <div class="firstLine"></div>
+      <div class="middleLine"></div>
+      <div class="lastLine"></div>
+    </div>
+    <nav class="nav">
+      <div class="nav-content ml6 mt6 f1">Dis the navvity nav</div>
     </nav>
     <main>
       <div class="vh-100 w-100 flex justify-center items-center white f1">
