fixed mobile scale meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <title>Castor and Pollux</title>
   <meta name="description" content="">
   <meta name="author" content="">
@@ -28,7 +29,7 @@
       <div class="lastLine"></div>
     </div>
     <nav class="nav">
-      <div class="nav-content ml6 mt6 f1">Dis the navvity nav</div>
+      <div class="nav-content ml6 mt6 f1">Dis da navvity nav</div>
     </nav>
     <main>
       <div class="vh-100 w-100 flex justify-center items-center white f1">
