intro - skip and logo fade in, main - single line top logo fade down main logo fade out nav updates

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body>
   <div id="intro" class="dn">
     <div id="introContainer" class="vh-100 w-100 flex justify-center items-center">
-      <!-- <img id="introGif" src="media/giphy-downsized-large.gif" class="vh-100 w-100 v-mid"/> -->
-      <img src="media/Copy of CastorPollux.png" alt="Castor & Pollux"/>
+      <img id="introLogo" src="media/Copy of CastorPollux.png" alt="Castor & Pollux"/>
+      <button id="skipIntro" class="white fixed f3 pa3 br3 ba b--white">Skip Intro --></button>
     </div>
   </div>
   <div id="mainContainer">
     <div id="stars" class="vh-100 w-100" style="top: 0"></div>
-    <header class="fixed w-100 flex items-center justify-center mt2">
-      <img src="media/Copy of CastorPollux.png" alt="Castor & Pollux" width="150"/>
+    <header class="fixed w-100 flex items-center justify-center">
+      <img src="media/c&p-single_line.png" alt="Castor & Pollux" width="350"/>
     </header>
     <div id="hamburgerNav">
       <div class="firstLine"></div>
@@ -29,11 +29,18 @@
       <div class="lastLine"></div>
     </div>
     <nav class="nav">
-      <div class="nav-content ml6 mt6 f1">Dis da navvity nav</div>
+      <div class="nav-content ml5 mt6 f1">
+        <a href="#about" class="db mb2">About</a>
+        <a href="#releases" class="db mb2">Releases</a>
+        <a href="#shows" class="db mb2">Upcoming Shows</a>
+        <a href="#press" class="db mb2">Press</a>
+        <a href="#merch" class="db mb2">Merch - coming soon</a>
+        <a href="#contact" class="db mb2">Contact Us</a>
+      </div>
     </nav>
     <main>
       <div class="vh-100 w-100 flex justify-center items-center white f1">
-        Welcome.
+        <img id="mainLogo" src="media/Copy of CastorPollux.png" alt="Castor & Pollux" />
       </div>
       <div id="container">
         <div class="f3 h5 h5 bg-white mbAlot mh7 pa3">content section</div>
