minor tweaks to last push

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <header class="fixed w-100 flex items-center justify-center">
       <img src="media/c&p-single_line.png" alt="Castor & Pollux" width="350"/>
     </header>
-    <div id="hamburgerNav">
+    <button id="hamburgerNav">
       <div class="firstLine"></div>
       <div class="middleLine"></div>
       <div class="lastLine"></div>
-    </div>
+    </button>
     <nav class="nav">
       <div class="nav-content ml5 mt6 f1">
         <a href="#about" class="db mb2">About</a>
