blank white screen intro transition

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <div id="intro" class="dn">
     <div id="introContainer" class="vh-100 w-100 flex justify-center items-center">
       <img id="introLogo" src="media/Copy of CastorPollux.png" alt="Castor & Pollux"/>
+      <div id="introTransition"></div>
       <button id="skipIntro" class="white fixed f3 pa3 br3 ba b--white">Skip Intro --></button>
     </div>
   </div>
