--- a/index.html
+++ b/index.html
@@ -46,41 +46,119 @@
       <div class="nav-content pl3 pl5-ns pt5 pt6-ns f2 f1-ns">
         <a href="#about" class="dib mb2 nav-item">About</a>
         <a href="#releases" class="dib mb2 nav-item">Releases</a>
-        <a href="#shows" class="dib mb2 nav-item">Upcoming Shows</a>
-        <a href="#merch" class="dib mb2 nav-item">Merch - coming soon</a>
-        <a href="#press" class="dib mb2 nav-item">Press / Media</a>
+        <a href="#" class="dib mb2 nav-item">Upcoming Shows</a>
+        <a href="#" class="dib mb2 nav-item">Merch - coming soon</a>
+        <a href="#" class="dib mb2 nav-item">Press / Media</a>
         <a href="#contact" class="dib mb2 nav-item">Contact Us</a>
       </div>
       <!-- <div class="nav-hover-overlay"></div> -->
     </nav>
     <main>
-      <section id="about" class="white relative" data-aos="fade" data-aos-anchor-placement="top-center" data-aos-duration="500">
-        <img id="bioImage" src="./media/Soft Edge.png" alt="" width="1688" class="db center">
-        <!-- <div id="aboutGradient" class="absolute top-0 left-0"></div> -->
-        <div id="bioTextContainer" class="relative flex justify-center w-100 bb bt b--gray pv3 pv5-ns ph2">
-          <p id="bioText" class="f4-m f3-ns lh-copy ph2 center">
-            Joe and Pete Romano, otherwise known as Castor & Pollux, are the New York, NY based twin brother production and DJ duo. The pair have been producing dance music for five years now. First inspired by acts like Hardwell, Swedish House Mafia, and W&W, now Castor & Pollux are embarking on a journey together, right by each other's side, in creating progressive and bigroom anthems. The twin brothers are looking to create their own destiny in touching people with their music and recognized as two guys that enjoy nothing more than putting a smile on people's faces. Castor & Pollux have performed alongside HARBER at Mercury Lounge during Thanksgiving weekend 2019 and expect to make noise with more performances in 2020. Their fans and followers can look forward to brand new originals and remixes on Spotify and SoundCloud.
-          </p>
-        </div>
+      <section id="about" class="white relative" data-aos="" data-aos-duration="2000">
+        <!-- <div class="about-offset"> -->
+          <h2 class="dn" aria-hidden="false">about</h2>
+          <img id="bioImage" src="./media/Soft Edge.png" alt="" width="1688" class="db center">
+          <!-- <div id="aboutGradient" class="absolute top-0 left-0"></div> -->
+          <div id="bioTextContainer" class="relative flex justify-center w-100 bb bt b--gray pv3 pv5-ns ph2">
+            <p id="bioText" class="f4-m f3-ns lh-copy ph2 center">
+              Joe and Pete Romano, otherwise known as Castor & Pollux, are the New York, NY based twin brother production and DJ duo. The pair have been producing dance music for five years now. First inspired by acts like Hardwell, Swedish House Mafia, and W&W, now Castor & Pollux are embarking on a journey together, right by each other's side, in creating progressive and bigroom anthems. The twin brothers are looking to create their own destiny in touching people with their music and recognized as two guys that enjoy nothing more than putting a smile on people's faces. Castor & Pollux have performed alongside HARBER at Mercury Lounge during Thanksgiving weekend 2019 and expect to make noise with more performances in 2020. Their fans and followers can look forward to brand new originals and remixes on Spotify and SoundCloud.
+            </p>
+          </div>
+        <!-- </div> -->
       </section>
-      <section id="releases" class="white pt7">
-        <ul class="mw5 center">
-          <li class="pv5" data-aos="fade-right">
+      <section id="releases" class="white pv5-l">
+        <h2 class="dn" aria-hidden="false">releases</h2>
+        <ul class="mw5 center releases-list">
+          <li id="release-warzone" class="release-card pv5 pv0-l">
+            <iframe src="https://open.spotify.com/embed/track/3BIHSXjkfhNpTPcQVWlE0R" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </li>
+          <li id="release-your_destiny" class="release-card pv5 pv0-l">
+            <iframe src="https://open.spotify.com/embed/track/0ZXmhvGI5AI2h83JM3RmiV" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </li>
+          <li id="release-feel_it_too" class="release-card pv5 pv0-l">
             <iframe src="https://open.spotify.com/embed/track/5GNK9oDV7fZeHbWokvAfOH" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
-          <li class="pv5" data-aos="fade-left">
+          <li id="release-enter_the_world" class="release-card pv5 pv0-l">
             <iframe src="https://open.spotify.com/embed/track/7B0ND16APx16UwGqBUaHET" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </li>
+          <li id="release-infected" class="release-card pv5 pv0-l">
+            <iframe src="https://open.spotify.com/embed/track/59pfyc5IcyCAZtP98O8Gzo" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </li>
+          <li id="release-recon" class="release-card pv5 pv0-l">
+            <iframe src="https://open.spotify.com/embed/track/6vwjwyOynmJWw76mxYWLUh" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </li>
+          <li id="release-evade" class="release-card pv5 pv0-l">
+            <iframe src="https://open.spotify.com/embed/track/5vWjBftLQ7fCuJpZpKJLwI" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </li>
+          <li id="release-fiesta" class="release-card pv5 pv0-l">
+            <iframe src="https://open.spotify.com/embed/track/2z3FlfHMBa53arLGp8Abyg" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </li>
+          <li id="release-fake_love" class="release-card pv5 pv0-l">
+            <iframe src="https://open.spotify.com/embed/track/1kljBvAA6437tKoOg0Vrnm" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </li>
+          <li id="release-predator" class="release-card pv5 pv0-l">
+            <iframe src="https://open.spotify.com/embed/track/6mALdYQy1c5QNtFWLo7uXx" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </li>
+          <li id="release-drop_bombs" class="release-card pv5 pv0-l">
+            <iframe src="https://open.spotify.com/embed/track/4g0KLJgbkrDeDAlCOfxvzM" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
         </ul>
       </section>
+      <footer id="contact">
+        <ul class="flex mw7 justify-between items-center center h-100 pv3 ph2">
+          <li>
+            <a href="https://open.spotify.com/artist/6fHUILCpBvfSHB48AEciPG?si=SQQEFDC-RrKzxtKizT5HHg" target="_blank" rel=”noopener noreferrer”>
+              <i class="fa fa-spotify fa-3x"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://soundcloud.com/castorandpollux_music" target="_blank" rel=”noopener noreferrer”>
+              <i class="fa fa-soundcloud fa-3x"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/candpmusic/" target="_blank" rel=”noopener noreferrer”>
+              <i class="fa fa-facebook-f fa-3x"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/castorandpolluxmusic/" target="_blank" rel=”noopener noreferrer”>
+              <i class="fa fa-instagram fa-3x"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/candpmusic" target="_blank" rel=”noopener noreferrer”>
+              <i class="fa fa-twitter fa-3x"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/channel/UCJkZIHURVIm7zo7n4kaAWyw" target="_blank" rel=”noopener noreferrer”>
+              <i class="fa fa-youtube fa-3x"></i>
+            </a>
+          </li>
+        </ul>
+      </footer>
     </main>
     <a href="#" class="backToTop"><i class="fa fa-angle-double-up white fa-4x"></i></a>
-    <footer>
-  
-    </footer>
   </div>
   <script src="https://use.fontawesome.com/f61d977148.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
+
+<!-- 
+
+   data-aos="fade-right" data-aos-anchor-placement="center-bottom"
+ data-aos="fade-left" data-aos-anchor-placement="center-bottom"
+ data-aos="fade-right" data-aos-anchor-placement="center-bottom"
+ data-aos="fade-left" data-aos-anchor-placement="center-bottom"
+ data-aos="fade-right" data-aos-anchor-placement="center-bottom"
+ data-aos="fade-left" data-aos-anchor-placement="center-bottom"
+ data-aos="fade-right" data-aos-anchor-placement="center-bottom"
+ data-aos="fade-left" data-aos-anchor-placement="center-bottom"
+ data-aos="fade-right" data-aos-anchor-placement="center-bottom"
+ data-aos="fade-left" data-aos-anchor-placement="center-bottom"
+ data-aos="fade-right" data-aos-anchor-placement="center-bottom"
+
+ -->
