--- a/index.html
+++ b/index.html
@@ -69,37 +69,37 @@
       <section id="releases" class="white pv5-l">
         <h2 class="dn" aria-hidden="false">releases</h2>
         <ul class="mw5-ns tc center releases-list">
-          <li id="release-warzone" class="release-card pv5 pv0-l">
+          <li id="release-warzone" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <iframe src="https://open.spotify.com/embed/track/3BIHSXjkfhNpTPcQVWlE0R" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
-          <li id="release-your_destiny" class="release-card pv5 pv0-l">
+          <li id="release-your_destiny" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <iframe src="https://open.spotify.com/embed/track/0ZXmhvGI5AI2h83JM3RmiV" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
-          <li id="release-feel_it_too" class="release-card pv5 pv0-l">
+          <li id="release-feel_it_too" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <iframe src="https://open.spotify.com/embed/track/5GNK9oDV7fZeHbWokvAfOH" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
-          <li id="release-enter_the_world" class="release-card pv5 pv0-l">
+          <li id="release-enter_the_world" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <iframe src="https://open.spotify.com/embed/track/7B0ND16APx16UwGqBUaHET" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
-          <li id="release-infected" class="release-card pv5 pv0-l">
+          <li id="release-infected" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <iframe src="https://open.spotify.com/embed/track/59pfyc5IcyCAZtP98O8Gzo" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
-          <li id="release-recon" class="release-card pv5 pv0-l">
+          <li id="release-recon" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <iframe src="https://open.spotify.com/embed/track/6vwjwyOynmJWw76mxYWLUh" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
-          <li id="release-evade" class="release-card pv5 pv0-l">
+          <li id="release-evade" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <iframe src="https://open.spotify.com/embed/track/5vWjBftLQ7fCuJpZpKJLwI" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
-          <li id="release-fiesta" class="release-card pv5 pv0-l">
+          <li id="release-fiesta" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <iframe src="https://open.spotify.com/embed/track/2z3FlfHMBa53arLGp8Abyg" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
-          <li id="release-fake_love" class="release-card pv5 pv0-l">
+          <li id="release-fake_love" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <iframe src="https://open.spotify.com/embed/track/1kljBvAA6437tKoOg0Vrnm" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
-          <li id="release-predator" class="release-card pv5 pv0-l">
+          <li id="release-predator" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <iframe src="https://open.spotify.com/embed/track/6mALdYQy1c5QNtFWLo7uXx" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
-          <li id="release-drop_bombs" class="release-card pv5 pv0-l">
+          <li id="release-drop_bombs" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <iframe src="https://open.spotify.com/embed/track/4g0KLJgbkrDeDAlCOfxvzM" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
         </ul>
@@ -146,19 +146,3 @@
   <script src="js/scripts.js"></script>
 </body>
 </html>
-
-<!-- 
-
-   data-aos="fade-right" data-aos-anchor-placement="center-bottom"
- data-aos="fade-left" data-aos-anchor-placement="center-bottom"
- data-aos="fade-right" data-aos-anchor-placement="center-bottom"
- data-aos="fade-left" data-aos-anchor-placement="center-bottom"
- data-aos="fade-right" data-aos-anchor-placement="center-bottom"
- data-aos="fade-left" data-aos-anchor-placement="center-bottom"
- data-aos="fade-right" data-aos-anchor-placement="center-bottom"
- data-aos="fade-left" data-aos-anchor-placement="center-bottom"
- data-aos="fade-right" data-aos-anchor-placement="center-bottom"
- data-aos="fade-left" data-aos-anchor-placement="center-bottom"
- data-aos="fade-right" data-aos-anchor-placement="center-bottom"
-
- -->
