we are gods release

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
       <section id="releases" class="white pv5-l">
         <h2 class="dn" aria-hidden="false">releases</h2>
         <ul class="mw5-ns tc center releases-list">
+          <li id="release-we_are_gods" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+            <iframe src="https://open.spotify.com/embed/track/5unAT3DTVzN24a2tGu87am" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </li>
           <li id="release-warzone" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <iframe src="https://open.spotify.com/embed/track/3BIHSXjkfhNpTPcQVWlE0R" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </li>
