--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <img class="mainLogo" src="./media/Copy of CastorPollux.png" alt="Castor & Pollux" />
     </header>
-    <div class="topLogo ph2">
+    <div class="topLogo ph2 pv3-ns">
       <img src="media/c&p-single_line.png" alt="Castor & Pollux"/>
     </div>
     <button class="hamburgerNav">
@@ -66,44 +66,68 @@
           </div>
         <!-- </div> -->
       </section>
-      <section id="releases" class="white pv5-l">
+      <section id="releases" class="white pv6-l">
         <h2 class="dn" aria-hidden="false">releases</h2>
-        <ul class="mw5-ns tc center releases-list">
+        <ul class="flex flex-column items-center releases-list">
           <li id="release-we_are_gods" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <iframe src="https://open.spotify.com/embed/track/5unAT3DTVzN24a2tGu87am" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <a href="https://open.spotify.com/album/3kFtRs3fzQxobz0dsv9Ie8?si=WHW5XabbRYq5I15D0JhZxw" target="_blank" rel=”noopener noreferrer”>
+              <img src="./media/album_art/We_Are_Gods_Artwork.jpg" alt="We Are Gods by Castor & Pollux">
+            </a>
           </li>
-          <li id="release-warzone" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <iframe src="https://open.spotify.com/embed/track/3BIHSXjkfhNpTPcQVWlE0R" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <li id="release-warzone" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/album/67jZQiyiYNML594l39bdxP?si=X5osaHJSQvSZJkKkMgFCRA" target="_blank" rel=”noopener noreferrer”>
+              <img src="./media/album_art/warzone.png" alt="Warzone by Castor & Pollux">
+            </a>
           </li>
-          <li id="release-your_destiny" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <iframe src="https://open.spotify.com/embed/track/0ZXmhvGI5AI2h83JM3RmiV" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <li id="release-your_destiny" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/album/0zhizxDZ1uyRXynPyZYrWR?si=rjgSu8ICQ9CsUlc99i1anA" target="_blank" rel=”noopener noreferrer”>
+              <img src="./media/album_art/your_destiny.jpg" alt="Your Destiny by Castor & Pollux">
+            </a>
           </li>
-          <li id="release-feel_it_too" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <iframe src="https://open.spotify.com/embed/track/5GNK9oDV7fZeHbWokvAfOH" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <li id="release-feel_it_too" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/album/4yyLYONgySxG8o7VNjv8S2?si=J4T9Whk1TeKwlj3l8PTXSg" target="_blank" rel=”noopener noreferrer”>
+              <img src="./media/album_art/FeelitToo.jpg" alt="Feel It Too by Castor & Pollux">
+            </a>
           </li>
-          <li id="release-enter_the_world" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <iframe src="https://open.spotify.com/embed/track/7B0ND16APx16UwGqBUaHET" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <li id="release-enter_the_world" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/album/70dLWw2aeY5HNJRGZfrxm4?si=8yqo8kYZRzeUtP4N8qsOFg" target="_blank" rel=”noopener noreferrer”>
+              <img src="./media/album_art/EnterTheWorld.jpg" alt="Enter the World by Castor & Pollux">
+            </a>
           </li>
-          <li id="release-infected" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <iframe src="https://open.spotify.com/embed/track/59pfyc5IcyCAZtP98O8Gzo" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <li id="release-infected" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/album/1x8eYPRsnKUlZSjlgq4BbM?si=5KmcMlIKTi6VHeafRL3BrQ" target="_blank" rel=”noopener noreferrer”>
+              <img src="./media/album_art/Infected.jpg" alt="Infected by Castor & Pollux">
+            </a>
           </li>
-          <li id="release-recon" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <iframe src="https://open.spotify.com/embed/track/6vwjwyOynmJWw76mxYWLUh" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <li id="release-recon" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/album/7wxGJ17mj9yNYqyiGXIrPt?si=GRfQzNhhT9KHroz-9dr2Mg" target="_blank" rel=”noopener noreferrer”>
+              <img src="./media/album_art/Recon.png" alt="Recon by Castor & Pollux">
+            </a>
           </li>
-          <li id="release-evade" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <iframe src="https://open.spotify.com/embed/track/5vWjBftLQ7fCuJpZpKJLwI" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <li id="release-evade" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/album/7eAvPccyi8zCdMc4TdGPLZ?si=OAfWyvhBTn2qJT_3lRAGbA" target="_blank" rel=”noopener noreferrer”>
+              <img src="./media/album_art/Evade.png" alt="Evade by Castor & Pollux">
+            </a>
           </li>
-          <li id="release-fiesta" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <iframe src="https://open.spotify.com/embed/track/2z3FlfHMBa53arLGp8Abyg" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <li id="release-fiesta" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/album/4tQiTP3toiYjhRtCp0dMOX?si=g_Z2DkgZRLiIu-PI-cVQvw" target="_blank" rel=”noopener noreferrer”>
+              <img src="./media/album_art/Fiesta.png" alt="Fiesta by Castor & Pollux">
+            </a>
           </li>
-          <li id="release-fake_love" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <iframe src="https://open.spotify.com/embed/track/1kljBvAA6437tKoOg0Vrnm" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <li id="release-fake_love" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/album/4YuLLEVasPcpZHCz0Ktzzd?si=wez5NtM-TTeNY4qiRlr-pw" target="_blank" rel=”noopener noreferrer”>
+              <img src="./media/album_art/fakelove.jpg" alt="Fake Love by Castor & Pollux">
+            </a>          
           </li>
-          <li id="release-predator" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <iframe src="https://open.spotify.com/embed/track/6mALdYQy1c5QNtFWLo7uXx" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <li id="release-predator" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/album/5VZUNdTcsIlUfwnoeQv6Ii?si=9vpqYZmWTheqg0pWvbhC7g" target="_blank" rel=”noopener noreferrer”>
+              <img src="./media/album_art/Predator.png" alt="Predator by Castor & Pollux">
+            </a>
           </li>
-          <li id="release-drop_bombs" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <iframe src="https://open.spotify.com/embed/track/4g0KLJgbkrDeDAlCOfxvzM" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <li id="release-drop_bombs" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/album/5deFmS4Lc3usCQewL8erSN?si=HM6GTsqKSMmA-xJVpY5ltw" target="_blank" rel=”noopener noreferrer”>
+              <img src="./media/album_art/Drop_Bombs.jpg" alt="Drop Bombs by Castor & Pollux">
+            </a>
           </li>
         </ul>
       </section>
