bio updates skip intro other stuff

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="introContainer" class="vh-100 w-100 flex justify-center items-center">
       <img id="introLogo" src="media/Copy of CastorPollux.png" alt="Castor & Pollux"/>
       <div id="introTransition"></div>
-      <button id="skipIntro" class="white fixed f3 pa3 br3 ba b--white">Skip Intro</button>
+      <button id="skipIntro" class="white fixed f4">Skip Intro</button>
     </div>
   </div>
   <div id="mainContainer">
@@ -43,7 +43,7 @@
     </button>
     <nav class="nav">
       <img id="nav-background-image" src="./media/NavMenuPicbackground.png" alt="">
-      <div class="nav-content pl3 pl5-ns pt5 pt6-ns f2 f1-ns">
+      <div class="nav-content pl3 pl5-ns pt5 pt6-ns f25-s f1-ns">
         <a href="#about" class="dib mb2 nav-item">About</a>
         <a href="#releases" class="dib mb2 nav-item">Releases</a>
         <a href="#" class="dib mb2 nav-item">Upcoming Shows</a>
@@ -57,11 +57,12 @@
       <section id="about" class="white relative" data-aos="" data-aos-duration="2000">
         <!-- <div class="about-offset"> -->
           <h2 class="dn" aria-hidden="false">about</h2>
-          <img id="bioImage" src="./media/Soft Edge.png" alt="" width="1688" class="db center">
+          <img id="bioImage" src="./media/Romanos_Good_Softies.png" alt="Castor & Pollux bio pic" width="1688" class="db center">
           <!-- <div id="aboutGradient" class="absolute top-0 left-0"></div> -->
-          <div id="bioTextContainer" class="relative flex justify-center w-100 bb bt b--gray pv3 pv5-ns ph2">
-            <p id="bioText" class="f4-m f3-ns lh-copy ph2 center">
-              Joe and Pete Romano, otherwise known as Castor & Pollux, are the New York, NY based twin brother production and DJ duo. The pair have been producing dance music for five years now. First inspired by acts like Hardwell, Swedish House Mafia, and W&W, now Castor & Pollux are embarking on a journey together, right by each other's side, in creating progressive and bigroom anthems. The twin brothers are looking to create their own destiny in touching people with their music and recognized as two guys that enjoy nothing more than putting a smile on people's faces. Castor & Pollux have performed alongside HARBER at Mercury Lounge during Thanksgiving weekend 2019 and expect to make noise with more performances in 2020. Their fans and followers can look forward to brand new originals and remixes on Spotify and SoundCloud.
+          <div id="bioTextContainer" class="relative flex justify-center w-100 bb bt b--gray pv3 pv4-ns ph2">
+            <p id="bioText" class="f4-m f3-ns lh-copy ph3 ph2-l center">
+              Welcome to the home of your favorite Twin DJs and producers Castor & Pollux. Based in New York City, the dynamic duo have been demolishing the edm scene for the past six years, releasing big room sounds one after another. With 9 releases in 2020 alone, Castor & Pollux are ready for an even bigger 2021. 
+              <br/>The question is, are you?
             </p>
           </div>
         <!-- </div> -->
